# Driver-Monitoring-System-

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.yaml
scripts/: run_local.ps1  run_local.sh
src/dms/: __init__.py  app.py  video_loop.py
src/dms/audio/: __init__.py  alerts.py
src/dms/detectors/: __init__.py  phone.py
src/dms/face/: __init__.py  metrics.py
src/dms/headpose/: __init__.py  pose.py
src/dms/hud/: __init__.py  overlay.py
src/dms/utils/: __init__.py  config.py  logging.py  timer.py
tests/: test_config.py  test_metrics.py
